--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# adicionando nodes e definindo propried\n",
-    "mygraph.add_node('Next', {'clientes':4500})\n",
-    "mygraph.add_node('Nubank', {'clientes':8000})\n",
-    "mygraph.add_node('Itau', {'clientes':8000})\n",
-    "mygraph.add_node('XP Investimentos', {'clientes':45000})\n",
-    "mygraph.add_node('BB', {'clientes':3000})\n",
+    "# adicionando nodes e definindo propriedades\n",
+    "mygraph.add_node('Next', {'clientes':3})\n",
+    "mygraph.add_node('Nubank', {'clientes':41})\n",
+    "mygraph.add_node('Itau', {'clientes':101})\n",
+    "mygraph.add_node('XP Investimentos', {'clientes':5})\n",
+    "mygraph.add_node('BB', {'clientes':88})\n",
     "\n",
     "# adicionando arestas e propriedades\n",
     "mygraph.add_edge('Next', 'BB', {'enviado': 45000})\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
          },
          "mode": "lines",
          "type": "scatter",
-         "uid": "aa0ac8a5-aa1d-4c8d-8faa-537da1cca416",
+         "uid": "d29bc0cf-c851-4de0-a71d-6d84752c2b7d",
          "x": [
           0.9999999999999999,
           0.30901710943610267,
@@ -130,9 +130,9 @@
          "hoverinfo": "text",
          "marker": {
           "color": [
-           0.0416,
-           0,
-           0,
+           1,
+           1,
+           0.4904406669112552,
            1
           ],
           "colorbar": {
@@ -149,18 +149,27 @@
           },
           "reversescale": true,
           "showscale": true,
-          "size": 10
+          "size": [
+           3,
+           41,
+           101,
+           5,
+           88
+          ],
+          "sizemin": 10,
+          "sizemode": "area",
+          "sizeref": 0.12625
          },
          "mode": "markers",
          "text": [
-          "baba 4500",
-          "baba 8000",
-          "baba 8000",
-          "baba 45000",
-          "baba 3000"
+          "baba:  3",
+          "baba:  41",
+          "baba:  101",
+          "baba:  5",
+          "baba:  88"
          ],
          "type": "scatter",
-         "uid": "b97fb6ea-6629-4893-bdb8-6cb05b22162c",
+         "uid": "693bfd71-5a79-48d5-be09-2c124fcff9dc",
          "x": [
           0.9999999999999999,
           0.30901696042448806,
@@ -260,21 +269,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"97f65bab-b717-41f1-8b66-b9a9f220ad03\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"4b92e459-0b0c-49d1-83c5-d67bdbe9b629\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"97f65bab-b717-41f1-8b66-b9a9f220ad03\")) {\n",
+       "                if (document.getElementById(\"4b92e459-0b0c-49d1-83c5-d67bdbe9b629\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '97f65bab-b717-41f1-8b66-b9a9f220ad03',\n",
-       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"a9536988-2c82-4f58-97bc-50da60d33662\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [0.0416, 0.0, 0.0, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": 10}, \"mode\": \"markers\", \"text\": [\"baba 4500\", \"baba 8000\", \"baba 8000\", \"baba 45000\", \"baba 3000\"], \"type\": \"scatter\", \"uid\": \"f74ee1c5-45bc-42c9-ad87-7760649dff3d\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        '4b92e459-0b0c-49d1-83c5-d67bdbe9b629',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"a7dcc152-dba9-446b-8395-2cae739b2e74\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [1.0, 1.0, 0.4904406669112552, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": [3, 41, 101, 5, 88], \"sizemin\": 10, \"sizemode\": \"area\", \"sizeref\": 0.12625}, \"mode\": \"markers\", \"text\": [\"baba:  3\", \"baba:  41\", \"baba:  101\", \"baba:  5\", \"baba:  88\"], \"type\": \"scatter\", \"uid\": \"934f2aa6-7ac0-4d02-b8a9-ed2136768f93\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
        "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"coco\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('97f65bab-b717-41f1-8b66-b9a9f220ad03');\n",
+       "var gd = document.getElementById('4b92e459-0b0c-49d1-83c5-d67bdbe9b629');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -308,7 +317,7 @@
     }
    ],
    "source": [
-    "mygraph.plot(title='coco', node_label= 'baba',field='clientes')"
+    "mygraph.plot(title='coco', node_label= 'baba: ',field='clientes', node_size_col='clientes')"
    ]
   },
   {
