--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +55,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
     "# adicionando nodes e definindo propriedades\n",
-    "mygraph.add_node('Next', {'clientes':3})\n",
-    "mygraph.add_node('Nubank', {'clientes':41})\n",
-    "mygraph.add_node('Itau', {'clientes':101})\n",
-    "mygraph.add_node('XP Investimentos', {'clientes':5})\n",
-    "mygraph.add_node('BB', {'clientes':88})\n",
+    "mygraph.add_node('Next', {'clientes':3, 'color': 'blue'})\n",
+    "mygraph.add_node('Nubank', {'clientes':41, 'color': '#9467bd'})\n",
+    "mygraph.add_node('Itau', {'clientes':101, 'color': '#d62728'})\n",
+    "mygraph.add_node('XP Investimentos', {'clientes':5, 'color': '#8c564b'})\n",
+    "mygraph.add_node('BB', {'clientes':88, 'color': 'lightyellow'})\n",
     "\n",
     "# adicionando arestas e propriedades\n",
     "mygraph.add_edge('Next', 'BB', {'enviado': 45000})\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
          },
          "mode": "lines",
          "type": "scatter",
-         "uid": "d29bc0cf-c851-4de0-a71d-6d84752c2b7d",
+         "uid": "544814bf-42ce-4ef3-9cd9-c314d8066b11",
          "x": [
           0.9999999999999999,
           0.30901710943610267,
@@ -129,12 +129,7 @@
         {
          "hoverinfo": "text",
          "marker": {
-          "color": [
-           1,
-           1,
-           0.4904406669112552,
-           1
-          ],
+          "color": 88,
           "colorbar": {
            "thickness": 15,
            "title": {
@@ -143,12 +138,10 @@
            },
            "xanchor": "left"
           },
-          "colorscale": "YlGnBu",
           "line": {
            "width": 2
           },
           "reversescale": true,
-          "showscale": true,
           "size": [
            3,
            41,
@@ -169,7 +162,7 @@
           "baba:  88"
          ],
          "type": "scatter",
-         "uid": "693bfd71-5a79-48d5-be09-2c124fcff9dc",
+         "uid": "66ac32ab-6ff3-4dc7-a597-a6d6ba3f5524",
          "x": [
           0.9999999999999999,
           0.30901696042448806,
@@ -269,21 +262,21 @@
        "<div>\n",
        "        \n",
        "        \n",
-       "            <div id=\"4b92e459-0b0c-49d1-83c5-d67bdbe9b629\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <div id=\"aaa4bc6d-6a76-40ba-9c6a-87a43bbd66e0\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
        "            <script type=\"text/javascript\">\n",
        "                require([\"plotly\"], function(Plotly) {\n",
        "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
        "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
        "                    \n",
-       "                if (document.getElementById(\"4b92e459-0b0c-49d1-83c5-d67bdbe9b629\")) {\n",
+       "                if (document.getElementById(\"aaa4bc6d-6a76-40ba-9c6a-87a43bbd66e0\")) {\n",
        "                    Plotly.newPlot(\n",
-       "                        '4b92e459-0b0c-49d1-83c5-d67bdbe9b629',\n",
-       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"a7dcc152-dba9-446b-8395-2cae739b2e74\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": [1.0, 1.0, 0.4904406669112552, 1.0], \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"YlGnBu\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": true, \"size\": [3, 41, 101, 5, 88], \"sizemin\": 10, \"sizemode\": \"area\", \"sizeref\": 0.12625}, \"mode\": \"markers\", \"text\": [\"baba:  3\", \"baba:  41\", \"baba:  101\", \"baba:  5\", \"baba:  88\"], \"type\": \"scatter\", \"uid\": \"934f2aa6-7ac0-4d02-b8a9-ed2136768f93\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        'aaa4bc6d-6a76-40ba-9c6a-87a43bbd66e0',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"81043e1a-2fbd-4553-91f0-cb7ff472bcdf\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"color\": 88, \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"line\": {\"width\": 2}, \"reversescale\": true, \"size\": [3, 41, 101, 5, 88], \"sizemin\": 10, \"sizemode\": \"area\", \"sizeref\": 0.12625}, \"mode\": \"markers\", \"text\": [\"baba:  3\", \"baba:  41\", \"baba:  101\", \"baba:  5\", \"baba:  88\"], \"type\": \"scatter\", \"uid\": \"4cb4a720-bf9e-4b76-b85f-286859200b2f\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
        "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"coco\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
        "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
        "                    ).then(function(){\n",
        "                            \n",
-       "var gd = document.getElementById('4b92e459-0b0c-49d1-83c5-d67bdbe9b629');\n",
+       "var gd = document.getElementById('aaa4bc6d-6a76-40ba-9c6a-87a43bbd66e0');\n",
        "var x = new MutationObserver(function (mutations, observer) {{\n",
        "        var display = window.getComputedStyle(gd).display;\n",
        "        if (!display || display === 'none') {{\n",
@@ -317,8 +310,15 @@
     }
    ],
    "source": [
-    "mygraph.plot(title='coco', node_label= 'baba: ',field='clientes', node_size_col='clientes')"
+    "mygraph.plot(title='coco', node_label= 'baba: ', node_size_col='clientes', node_color_col='clientes')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
