--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -60,11 +60,11 @@
    "outputs": [],
    "source": [
     "# adicionando nodes e definindo propriedades\n",
-    "mygraph.add_node('Next', {'clientes':3, 'color': 'blue'})\n",
-    "mygraph.add_node('Nubank', {'clientes':41, 'color': '#9467bd'})\n",
-    "mygraph.add_node('Itau', {'clientes':101, 'color': '#d62728'})\n",
-    "mygraph.add_node('XP Investimentos', {'clientes':5, 'color': '#8c564b'})\n",
-    "mygraph.add_node('BB', {'clientes':88, 'color': 'lightyellow'})\n",
+    "mygraph.add_node('Next', {'clientes':3})\n",
+    "mygraph.add_node('Nubank', {'clientes':41})\n",
+    "mygraph.add_node('Itau', {'clientes':101})\n",
+    "mygraph.add_node('XP Investimentos', {'clientes':5})\n",
+    "mygraph.add_node('BB', {'clientes':88})\n",
     "\n",
     "# adicionando arestas e propriedades\n",
     "mygraph.add_edge('Next', 'BB', {'enviado': 45000})\n",
