--- a/test_easyGraph.ipynb
+++ b/test_easyGraph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,27 +55,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# adicionando nodes e definindo propriedades\n",
-    "mygraph.node.add_node('Next', {'clientes':3})\n",
-    "mygraph.node.add_node('Nubank', {'clientes':41})\n",
-    "mygraph.node.add_node('Itau', {'clientes':101})\n",
-    "mygraph.node.add_node('XP Investimentos', {'clientes':5})\n",
-    "mygraph.node.add_node('BB', {'clientes':88})\n",
+    "mygraph.node.add('Next', {'clientes':3})\n",
+    "mygraph.node.add('Nubank', {'clientes':41})\n",
+    "mygraph.node.add('Itau', {'clientes':101})\n",
+    "mygraph.node.add('XP Investimentos', {'clientes':5})\n",
+    "mygraph.node.add('BB', {'clientes':88})\n",
     "\n",
     "# adicionando arestas e propriedades\n",
-    "mygraph.add_edge('Next', 'BB', {'enviado': 45000})\n",
-    "mygraph.add_edge('Next', 'Nubank', {'enviado': 10000})\n",
-    "mygraph.add_edge('Next', 'Itau', {'enviado': 30000})\n",
-    "mygraph.add_edge('Next', 'XP Investimentos', {'enviado': 30000})"
+    "mygraph.edge.add('Next', 'BB', {'enviado': 45000})\n",
+    "mygraph.edge.add('Next', 'Nubank', {'enviado': 10000})\n",
+    "mygraph.edge.add('Next', 'Itau', {'enviado': 30000})\n",
+    "mygraph.edge.add('Next', 'XP Investimentos', {'enviado': 30000})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -86,17 +86,238 @@
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'EasyGraph' object has no attribute 'node_trace'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-690-9895c3a7300b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# mygraph.plot(title='coco', node_label= 'baba: ', node_size_col='clientes', node_color_col='clientes')\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mmygraph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'coco'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_label\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0;34m'baba: '\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_color_col\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'clientes'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Dropbox/src/mystuffs2/easyGraph.py\u001b[0m in \u001b[0;36mplot\u001b[0;34m(self, title, node_label, label, node_size_col, node_color_col)\u001b[0m\n\u001b[1;32m    104\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__set_layout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__set_plot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnode_color_col\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnode_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 106\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__plot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Dropbox/src/mystuffs2/easyGraph.py\u001b[0m in \u001b[0;36m__plot\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__plot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m         \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0medge_trace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnode_trace\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     97\u001b[0m         \u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'networkx'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'EasyGraph' object has no attribute 'node_trace'"
-     ]
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "config": {
+        "linkText": "Export to plot.ly",
+        "plotlyServerURL": "https://plot.ly",
+        "responsive": true,
+        "showLink": false
+       },
+       "data": [
+        {
+         "hoverinfo": "none",
+         "line": {
+          "color": "#888",
+          "width": 0.5
+         },
+         "mode": "lines",
+         "type": "scatter",
+         "uid": "b0e5e752-7abe-4300-b1ca-c87cd8304df5",
+         "x": [
+          0.9999999999999999,
+          0.30901710943610267,
+          null,
+          0.9999999999999999,
+          0.30901696042448806,
+          null,
+          0.9999999999999999,
+          -0.8090170945349412,
+          null,
+          0.9999999999999999,
+          -0.8090169753256495,
+          null
+         ],
+         "y": [
+          2.38418583364819e-08,
+          -0.9510564735720718,
+          null,
+          2.38418583364819e-08,
+          0.9510565808604344,
+          null,
+          2.38418583364819e-08,
+          0.587785218735669,
+          null,
+          2.38418583364819e-08,
+          -0.5877853498658898,
+          null
+         ]
+        },
+        {
+         "hoverinfo": "text",
+         "marker": {
+          "cmax": null,
+          "cmin": null,
+          "color": 88,
+          "colorbar": {
+           "thickness": 15,
+           "title": {
+            "side": "right",
+            "text": "coco"
+           },
+           "xanchor": "left"
+          },
+          "colorscale": "Viridis",
+          "line": {
+           "width": 2
+          },
+          "reversescale": true,
+          "showscale": false,
+          "size": [
+           1,
+           1,
+           1,
+           1,
+           1
+          ],
+          "sizemin": 10,
+          "sizemode": "area",
+          "sizeref": 10
+         },
+         "mode": "markers",
+         "text": [
+          "baba:  3",
+          "baba:  41",
+          "baba:  101",
+          "baba:  5",
+          "baba:  88"
+         ],
+         "type": "scatter",
+         "uid": "c2073a9a-8cee-43ce-8195-067e5b10a857",
+         "x": [
+          0.9999999999999999,
+          0.30901696042448806,
+          -0.8090170945349412,
+          -0.8090169753256495,
+          0.30901710943610267
+         ],
+         "y": [
+          2.38418583364819e-08,
+          0.9510565808604344,
+          0.587785218735669,
+          -0.5877853498658898,
+          -0.9510564735720718
+         ]
+        }
+       ],
+       "layout": {
+        "annotations": [
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "Next",
+          "x": 0.9999999999999999,
+          "xref": "x",
+          "y": 0.10000002384185834,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "Nubank",
+          "x": 0.30901696042448806,
+          "xref": "x",
+          "y": 1.0510565808604344,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "Itau",
+          "x": -0.8090170945349412,
+          "xref": "x",
+          "y": 0.687785218735669,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "XP Investimentos",
+          "x": -0.8090169753256495,
+          "xref": "x",
+          "y": -0.48778534986588984,
+          "yref": "y"
+         },
+         {
+          "ax": 0,
+          "ay": 20,
+          "showarrow": false,
+          "text": "BB",
+          "x": 0.30901710943610267,
+          "xref": "x",
+          "y": -0.8510564735720718,
+          "yref": "y"
+         }
+        ],
+        "hovermode": "closest",
+        "margin": {
+         "b": 20,
+         "l": 5,
+         "r": 5,
+         "t": 40
+        },
+        "showlegend": false,
+        "title": {
+         "font": {
+          "size": 16
+         },
+         "text": "coco"
+        },
+        "xaxis": {
+         "showgrid": false,
+         "showticklabels": false,
+         "zeroline": false
+        },
+        "yaxis": {
+         "showgrid": false,
+         "showticklabels": false,
+         "zeroline": false
+        }
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "        \n",
+       "        \n",
+       "            <div id=\"61045196-8b64-4afc-977b-3854510b692b\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>\n",
+       "            <script type=\"text/javascript\">\n",
+       "                require([\"plotly\"], function(Plotly) {\n",
+       "                    window.PLOTLYENV=window.PLOTLYENV || {};\n",
+       "                    window.PLOTLYENV.BASE_URL='https://plot.ly';\n",
+       "                    \n",
+       "                if (document.getElementById(\"61045196-8b64-4afc-977b-3854510b692b\")) {\n",
+       "                    Plotly.newPlot(\n",
+       "                        '61045196-8b64-4afc-977b-3854510b692b',\n",
+       "                        [{\"hoverinfo\": \"none\", \"line\": {\"color\": \"#888\", \"width\": 0.5}, \"mode\": \"lines\", \"type\": \"scatter\", \"uid\": \"0b59e786-24a7-446b-a857-676f62b61b04\", \"x\": [0.9999999999999999, 0.30901710943610267, null, 0.9999999999999999, 0.30901696042448806, null, 0.9999999999999999, -0.8090170945349412, null, 0.9999999999999999, -0.8090169753256495, null], \"y\": [2.38418583364819e-08, -0.9510564735720718, null, 2.38418583364819e-08, 0.9510565808604344, null, 2.38418583364819e-08, 0.587785218735669, null, 2.38418583364819e-08, -0.5877853498658898, null]}, {\"hoverinfo\": \"text\", \"marker\": {\"cmax\": null, \"cmin\": null, \"color\": 88, \"colorbar\": {\"thickness\": 15, \"title\": {\"side\": \"right\", \"text\": \"coco\"}, \"xanchor\": \"left\"}, \"colorscale\": \"Viridis\", \"line\": {\"width\": 2}, \"reversescale\": true, \"showscale\": false, \"size\": [1, 1, 1, 1, 1], \"sizemin\": 10, \"sizemode\": \"area\", \"sizeref\": 10}, \"mode\": \"markers\", \"text\": [\"baba:  3\", \"baba:  41\", \"baba:  101\", \"baba:  5\", \"baba:  88\"], \"type\": \"scatter\", \"uid\": \"441ddd4c-6d75-40a6-a2d6-5f00b9c8eebb\", \"x\": [0.9999999999999999, 0.30901696042448806, -0.8090170945349412, -0.8090169753256495, 0.30901710943610267], \"y\": [2.38418583364819e-08, 0.9510565808604344, 0.587785218735669, -0.5877853498658898, -0.9510564735720718]}],\n",
+       "                        {\"annotations\": [{\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Next\", \"x\": 0.9999999999999999, \"xref\": \"x\", \"y\": 0.10000002384185834, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Nubank\", \"x\": 0.30901696042448806, \"xref\": \"x\", \"y\": 1.0510565808604344, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"Itau\", \"x\": -0.8090170945349412, \"xref\": \"x\", \"y\": 0.687785218735669, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"XP Investimentos\", \"x\": -0.8090169753256495, \"xref\": \"x\", \"y\": -0.48778534986588984, \"yref\": \"y\"}, {\"ax\": 0, \"ay\": 20, \"showarrow\": false, \"text\": \"BB\", \"x\": 0.30901710943610267, \"xref\": \"x\", \"y\": -0.8510564735720718, \"yref\": \"y\"}], \"hovermode\": \"closest\", \"margin\": {\"b\": 20, \"l\": 5, \"r\": 5, \"t\": 40}, \"showlegend\": false, \"title\": {\"font\": {\"size\": 16}, \"text\": \"coco\"}, \"xaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}, \"yaxis\": {\"showgrid\": false, \"showticklabels\": false, \"zeroline\": false}},\n",
+       "                        {\"showLink\": false, \"linkText\": \"Export to plot.ly\", \"plotlyServerURL\": \"https://plot.ly\", \"responsive\": true}\n",
+       "                    ).then(function(){\n",
+       "                            \n",
+       "var gd = document.getElementById('61045196-8b64-4afc-977b-3854510b692b');\n",
+       "var x = new MutationObserver(function (mutations, observer) {{\n",
+       "        var display = window.getComputedStyle(gd).display;\n",
+       "        if (!display || display === 'none') {{\n",
+       "            console.log([gd, 'removed!']);\n",
+       "            Plotly.purge(gd);\n",
+       "            observer.disconnect();\n",
+       "        }}\n",
+       "}});\n",
+       "\n",
+       "// Listen for the removal of the full notebook cells\n",
+       "var notebookContainer = gd.closest('#notebook-container');\n",
+       "if (notebookContainer) {{\n",
+       "    x.observe(notebookContainer, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "// Listen for the clearing of the current output cell\n",
+       "var outputEl = gd.closest('.output');\n",
+       "if (outputEl) {{\n",
+       "    x.observe(outputEl, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "                        })\n",
+       "                };\n",
+       "                });\n",
+       "            </script>\n",
+       "        </div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
